--- a/bulletin/torrse_en_bulletin1.html
+++ b/bulletin/torrse_en_bulletin1.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <h3>KAT search source problem</h3>
-<p>1.1 Change the KAT search source website to https://katcr.to/</p>
+<p>1.1 Change the KAT search source website to https://kickasstorrent.cr</p>
 <p>1.2 You can also search for source configuration synchronously</p>
 <p>2 If you have previously cached incorrect data, disable the cache priority load in the settings.</p>
 </html>
