--- a/bulletin/torrse_en_bulletin.html
+++ b/bulletin/torrse_en_bulletin.html
@@ -1,3 +1,3 @@
 ﻿<!DOCTYPE html>
-<img src="/search_source/en_sync_search_source.jpg" alt="Original file">
+<img src="https://seedboxs.me/search_source/en_sync_search_source.jpg" alt="Original file">
 </html>
