--- a/protocol/torrse_en_protocol.html
+++ b/protocol/torrse_en_protocol.html
@@ -31,5 +31,5 @@ This application uses crawler technology to integrate resources on the Internet 
 <h3>Changes to Terms of Use & Privacy Policy</h3>
 <p>We may update our Terms of Use & Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes accessing app settings page. These changes are effective immediately after they are posted on this page</p>
 <h3>Contact Us</h3>
-<p>If you have any questions or suggestions about our Terms of Use & Privacy Policy, do not hesitate to contact us at <b><font color="blue">app.torrse@gmail.com </font></b></p>
+<p>If you have any questions or suggestions about our Terms of Use & Privacy Policy, do not hesitate to contact us at <a>app.torrse@gmail.com </a></p>
 </html>
