--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -2,5 +2,5 @@
 <h3>关于网站验证</h3>
 <p>有一些搜索源需要验证才能访问，例如Rarbg，1337x，zooqle。</p>
 <h3><font color="red">云盘推荐</font></h3>
-<p>真心推荐一个磁力云盘给大家，磁力链接在线看，比115便宜但好用，<a href="https://dwz.cn/HlWB8pJZ" target="_blank">点击查看</a></p>
+<p>推荐一个磁力云盘给大家，磁力链接在线看。<a href="https://dwz.cn/HlWB8pJZ" target="_blank">点击查看</a></p>
 </html>
