--- a/bulletin/torrse_hi_bulletin.html
+++ b/bulletin/torrse_hi_bulletin.html
@@ -1,4 +1,4 @@
 ﻿<!DOCTYPE html>
 <h3>वेबसाइट सत्यापन के बारे में</h3>
-<p>कुछ खोज स्रोत हैं जिन्हें Rarbg, 1337x, zooqle जैसे उपयोग करने के लिए सत्यापित करने की आवश्यकता है।</p>
+<p>\t\tकुछ खोज स्रोत हैं जिन्हें Rarbg, 1337x, zooqle जैसे उपयोग करने के लिए सत्यापित करने की आवश्यकता है।</p>
 </html>
