--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <h5>关于网站验证</h5>
-<p>有一些搜索源需要验证才能访问，例如Rarbg，1337x，zooqle。</p>
+<p>\t\t有一些搜索源需要验证才能访问，例如Rarbg，1337x，zooqle。</p>
 <h5><font color="red">云盘推荐</font></h5>
-<p>推荐一个磁力云盘，支持文件预览。<a href="https://dwz.cn/HlWB8pJZ" target="_blank">点击查看</a></p>
+<p>\t\t推荐一个磁力云盘，支持文件预览。<a href="https://dwz.cn/HlWB8pJZ" target="_blank">点击查看</a></p>
 </html>
