--- a/bulletin/torrse_en_bulletin.html
+++ b/bulletin/torrse_en_bulletin.html
@@ -1,4 +1,4 @@
 ﻿<!DOCTYPE html>
 <h3>About website verification</h3>
-<p>There are some search sources that need to be verified in order to access such as Rarbg, 1337x, zooqle.</p>
+<p>\t\tThere are some search sources that need to be verified in order to access such as Rarbg, 1337x, zooqle.</p>
 </html>
