--- a/bulletin/torrse_fr_bulletin.html
+++ b/bulletin/torrse_fr_bulletin.html
@@ -1,4 +1,4 @@
 ﻿<!DOCTYPE html>
 <h3>À propos de la vérification du site Web</h3>
-<p>Certaines sources de recherche doivent être vérifiées pour pouvoir accéder, telles que Rarbg, 1337x, zooqle.</p>
+<p>\t\tCertaines sources de recherche doivent être vérifiées pour pouvoir accéder, telles que Rarbg, 1337x, zooqle.</p>
 </html>
