--- a/bulletin/torrse_it_bulletin.html
+++ b/bulletin/torrse_it_bulletin.html
@@ -1,4 +1,4 @@
 ﻿<!DOCTYPE html>
 <h3>Informazioni sulla verifica del sito Web</h3>
-<p>Ci sono alcune fonti di ricerca che devono essere verificate per accedere a Rarbg, 1337x, zooqle.</p>
+<p>\t\tCi sono alcune fonti di ricerca che devono essere verificate per accedere a Rarbg, 1337x, zooqle.</p>
 </html>
