--- a/bulletin/torrse_ko_bulletin.html
+++ b/bulletin/torrse_ko_bulletin.html
@@ -1,4 +1,4 @@
 ﻿<!DOCTYPE html>
-<h3>웹 사이트 인증 정보</h3>
-<p>\t\tRarbg, 1337x, zooqle 등과 같이 액세스하려면 확인해야 할 검색 소스가 있습니다.</p>
+<h5>웹 사이트 인증 정보</h5>
+<p>Rarbg, 1337x, zooqle 등과 같이 액세스하려면 확인해야 할 검색 소스가 있습니다.</p>
 </html>
