--- a/bulletin/torrse_de_bulletin.html
+++ b/bulletin/torrse_de_bulletin.html
@@ -1,4 +1,4 @@
 ﻿<!DOCTYPE html>
-<h3>Informationen zur Website-Überprüfung</h3>
-<p>\t\tEs gibt einige Suchquellen, die überprüft werden müssen, um auf Rarbg, 1337x, zooqle zuzugreifen.</p>
+<h5>Informationen zur Website-Überprüfung</h5>
+<p>Es gibt einige Suchquellen, die überprüft werden müssen, um auf Rarbg, 1337x, zooqle zuzugreifen.</p>
 </html>
