--- a/bulletin/torrse_ja_bulletin.html
+++ b/bulletin/torrse_ja_bulletin.html
@@ -1,4 +1,4 @@
 ﻿<!DOCTYPE html>
-<h3>ウェブサイトの確認について</h3>
-<p>\t\tRarbg、1337x、zooqleなど、アクセスするために確認が必要な検索元がいくつかあります。</p>
+<h5>ウェブサイトの確認について</h5>
+<p>Rarbg、1337x、zooqleなど、アクセスするために確認が必要な検索元がいくつかあります。</p>
 </html>
