--- a/bulletin/torrse_pt_bulletin.html
+++ b/bulletin/torrse_pt_bulletin.html
@@ -1,4 +1,4 @@
 ﻿<!DOCTYPE html>
-<h3>Sobre a verificação do website</h3>
-<p>\t\tExistem algumas fontes de pesquisa que precisam ser verificadas para acessar, como Rarbg, 1337x, zooqle.</p>
+<h5>Sobre a verificação do website</h5>
+<p>Existem algumas fontes de pesquisa que precisam ser verificadas para acessar, como Rarbg, 1337x, zooqle.</p>
 </html>
