--- a/bulletin/torrse_tw_bulletin.html
+++ b/bulletin/torrse_tw_bulletin.html
@@ -1,4 +1,4 @@
 ﻿<!DOCTYPE html>
-<h3>關於網站驗證</h3>
-<p>\t\t有一些搜索源需要驗證才能訪問，例如Rarbg，1337x，zooqle。</p>
+<h5>關於網站驗證</h5>
+<p>有一些搜索源需要驗證才能訪問，例如Rarbg，1337x，zooqle。</p>
 </html>
