--- a/bulletin/torrse_tw_bulletin.html
+++ b/bulletin/torrse_tw_bulletin.html
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
 <h5>關於網站驗證</h5>
 <p>有一些搜索源需要驗證才能訪問，例如Rarbg，1337x，zooqle。</p>
+<p>推薦一個磁力雲盤，支持文件預覽!<a href="https://dwz.cn/HlWB8pJZ" target="_blank">點擊查看</a>(TorrSE内置的瀏覽器不支持下載，請在其他瀏覽器中打開)</p>
 </html>
