--- a/lang/zh-cn/index.html
+++ b/lang/zh-cn/index.html
@@ -12,13 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="baidu-site-verification" content="iWKi8BD7Fl" />
 
-    <title>TorrSE Website，TorrSE App</title>
+    <title>TorrSE官网，TorrSE App，TorrSE应用程序</title>
 
-    <meta name="description" content="The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!">
+    <meta name="description" content="Android上最好的种子搜索客户端！ 专注于最简单，最方便，最强大的种子搜索客户端!">
     <meta property="og:type" content="webpage">
     <meta property="og:url" content="">
     <meta property="og:title" content="TorrSE">
-    <meta property="og:description" content="TorrSE Website">
+    <meta property="og:description" content="TorrSE官网">
     <meta name="apple-mobile-web-app-title" content="TorrSE">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -78,9 +78,9 @@
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class=""><a href="#home" class="smoothScroll">Main</a></li>
-                <li class=""><a href="#screenshot" class="smoothScroll">Screenshot</a></li>
-                <li class=""><a href="#pricing" class="smoothScroll">Download</a></li>
+                <li class=""><a href="#home" class="smoothScroll">主页</a></li>
+                <li class=""><a href="#screenshot" class="smoothScroll">应用截图</a></li>
+                <li class=""><a href="#pricing" class="smoothScroll">应用下载</a></li>
             </ul>
         </div>
 
@@ -102,11 +102,11 @@
             <div class="col-md-6 col-sm-7 col-xs-12">
                 <div class="home-thumb">
                     <h1 class="wow fadeInUp animated" data-wow-delay="0.6s"
-                        style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">App Main</h1>
+                        style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">应用主页</h1>
                     <p class="wow fadeInUp animated" data-wow-delay="0.8s"
-                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!</p>
+                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">Android上最好的种子搜索客户端！ 专注于最简单，最方便，最强大的种子搜索客户端!</p>
                     <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
-                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Download</a>
+                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">应用下载</a>
                 </div>
             </div>
 
@@ -124,8 +124,8 @@
 
             <div class="col-md-offset-2 col-md-8 col-sm-12">
                 <div class="section-title">
-                    <h1>App Screenshot</h1>
-                    <p class="wow fadeInUp" data-wow-delay="0.8s">Here is a screenshot of the app that contains the main features of this app</p>
+                    <h1>应用截图</h1>
+                    <p class="wow fadeInUp" data-wow-delay="0.8s">以下是该应用的屏幕截图，其中包含此应用的主要功能</p>
                 </div>
             </div>
 
@@ -191,7 +191,7 @@
 
             <div class="col-md-12 col-sm-12">
                 <div class="section-title">
-                    <h1>App Downloads</h1>
+                    <h1>应用下载</h1>
                     <hr>
                 </div>
             </div>
@@ -204,7 +204,7 @@
           <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
                 <a href="https://seedboxs.me/raw/app-release.apk"
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
-                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Download</a>
+                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">直接下载</a>
             </div>
 
 
