--- a/lang/de/index.html
+++ b/lang/de/index.html
@@ -12,13 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="baidu-site-verification" content="iWKi8BD7Fl" />
 
-    <title>TorrSE Website，TorrSE App</title>
+    <title>TorrSE-Website ， TorrSE-App</title>
 
-    <meta name="description" content="The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!">
+    <meta name="description" content="Der beste Torrent-Such-Client für Android! Konzentrieren Sie sich auf den einfachsten, bequemsten und leistungsfähigsten Torrent-Such-Client!">
     <meta property="og:type" content="webpage">
     <meta property="og:url" content="">
     <meta property="og:title" content="TorrSE">
-    <meta property="og:description" content="TorrSE Website">
+    <meta property="og:description" content="TorrSE-Website">
     <meta name="apple-mobile-web-app-title" content="TorrSE">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -31,8 +31,6 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-133439120-1');
-	  
-
     </script>
 
 
@@ -52,20 +50,6 @@
     <link rel="stylesheet" href="/static/appwebsite/style.css" charset="UTF-8">
 
 
-    <script type="text/javascript">
-	
-	　　var langType = navigator.appName;
-	　　if (langType == "Netscape"){
-		　　var lang = navigator.language;
-	　　}else{
-		　　var lang = navigator.userLanguage;
-	　　};
-	　　if (lang == "zh-CN"){
-	   　　 window.location.replace('https://seedboxs.me/lang/zh-cn/index.html');
-	　　}else if (lang == "zh-HK"||lang == "zh-TW"||lang == "zh-MO"||lang == "zh-SG"){
-	   　　 window.location.replace('https://seedboxs.me/lang/zh-tw/index.html');
-	　　}
-	</script>
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 <div class="adcenter">
@@ -96,8 +80,8 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class=""><a href="#home" class="smoothScroll">Main</a></li>
-                <li class=""><a href="#screenshot" class="smoothScroll">Screenshot</a></li>
-                <li class=""><a href="#pricing" class="smoothScroll">Download</a></li>
+                <li class=""><a href="#screenshot" class="smoothScroll">Bildschirmfoto</a></li>
+                <li class=""><a href="#pricing" class="smoothScroll">Herunterladen</a></li>
             </ul>
         </div>
 
@@ -121,9 +105,9 @@
                     <h1 class="wow fadeInUp animated" data-wow-delay="0.6s"
                         style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">App Main</h1>
                     <p class="wow fadeInUp animated" data-wow-delay="0.8s"
-                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!</p>
+                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">Der beste Torrent-Such-Client für Android! Konzentrieren Sie sich auf den einfachsten, bequemsten und leistungsfähigsten Torrent-Such-Client!</p>
                     <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
-                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Download</a>
+                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Herunterladen</a>
                 </div>
             </div>
 
@@ -141,8 +125,8 @@
 
             <div class="col-md-offset-2 col-md-8 col-sm-12">
                 <div class="section-title">
-                    <h1>App Screenshot</h1>
-                    <p class="wow fadeInUp" data-wow-delay="0.8s">Here is a screenshot of the app that contains the main features of this app</p>
+                    <h1>App-Screenshot</h1>
+                    <p class="wow fadeInUp" data-wow-delay="0.8s">Hier ist ein Screenshot der App, die die Hauptfunktionen dieser App enthält</p>
                 </div>
             </div>
 
@@ -208,7 +192,7 @@
 
             <div class="col-md-12 col-sm-12">
                 <div class="section-title">
-                    <h1>App Downloads</h1>
+                    <h1>App-Downloads</h1>
                     <hr>
                 </div>
             </div>
@@ -218,9 +202,6 @@
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Google Play</a>
             </div>
-
-
-
 
         </div>
     </div>
