--- a/lang/fr/index.html
+++ b/lang/fr/index.html
@@ -12,13 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="baidu-site-verification" content="iWKi8BD7Fl" />
 
-    <title>TorrSE Website，TorrSE App</title>
+    <title>Site Web TorrSE ， App TorrSE</title>
 
-    <meta name="description" content="The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!">
+    <meta name="description" content="Le meilleur client de recherche torrent sur Android! Concentrez-vous sur le client de recherche torrent le plus simple, le plus pratique et le plus puissant!">
     <meta property="og:type" content="webpage">
     <meta property="og:url" content="">
     <meta property="og:title" content="TorrSE">
-    <meta property="og:description" content="TorrSE Website">
+    <meta property="og:description" content="Site Web TorrSE">
     <meta name="apple-mobile-web-app-title" content="TorrSE">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -50,33 +50,6 @@
     <link rel="stylesheet" href="/static/appwebsite/style.css" charset="UTF-8">
 
 
-    <script type="text/javascript">
-	
-	　　var langType = navigator.appName;
-	　　if (langType == "Netscape"){
-		　　var lang = navigator.language;
-	　　}else{
-		　　var lang = navigator.userLanguage;
-	　　};
-	    var lang = lang.substr(0, 2);
-	　　if (lang == "es"){
-	 　 	window.location.replace('https://seedboxs.me/lang/es/index.html');
-	　　}else if (lang == "de"){
-	   　	window.location.replace('https://seedboxs.me/lang/de/index.html');
-	　　}else if (lang == "fr"){
-	   　	window.location.replace('https://seedboxs.me/lang/fr/index.html');
-	　　}else if (lang == "pt"){
-	   　	window.location.replace('https://seedboxs.me/lang/pt/index.html');
-	　　}else if (lang == "zh"){
-	   　	window.location.replace('https://seedboxs.me/lang/zh-tw/index.html');
-	　　}else if (lang == "it"){
-	   　	window.location.replace('https://seedboxs.me/lang/it/index.html');
-	　　}else if (lang == "ko"){
-	   　	window.location.replace('https://seedboxs.me/lang/ko/index.html');
-	　　}else if (lang == "ja"){
-	   　	window.location.replace('https://seedboxs.me/lang/ja/index.html');
-	　　}
-	</script>
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 <div class="adcenter">
@@ -106,9 +79,9 @@
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class=""><a href="#home" class="smoothScroll">Main</a></li>
-                <li class=""><a href="#screenshot" class="smoothScroll">Screenshot</a></li>
-                <li class=""><a href="#pricing" class="smoothScroll">Download</a></li>
+                <li class=""><a href="#home" class="smoothScroll">Principal</a></li>
+                <li class=""><a href="#screenshot" class="smoothScroll">Capture d'écran</a></li>
+                <li class=""><a href="#pricing" class="smoothScroll">Télécharger</a></li>
             </ul>
         </div>
 
@@ -130,11 +103,11 @@
             <div class="col-md-6 col-sm-7 col-xs-12">
                 <div class="home-thumb">
                     <h1 class="wow fadeInUp animated" data-wow-delay="0.6s"
-                        style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">App Main</h1>
+                        style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">App Principal</h1>
                     <p class="wow fadeInUp animated" data-wow-delay="0.8s"
-                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!</p>
+                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">Le meilleur client de recherche torrent sur Android! Concentrez-vous sur le client de recherche torrent le plus simple, le plus pratique et le plus puissant!</p>
                     <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
-                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Download</a>
+                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Télécharger</a>
                 </div>
             </div>
 
@@ -152,8 +125,8 @@
 
             <div class="col-md-offset-2 col-md-8 col-sm-12">
                 <div class="section-title">
-                    <h1>App Screenshot</h1>
-                    <p class="wow fadeInUp" data-wow-delay="0.8s">Here is a screenshot of the app that contains the main features of this app</p>
+                    <h1>App Capture d'écran</h1>
+                    <p class="wow fadeInUp" data-wow-delay="0.8s">Voici une capture d'écran de l'application qui contient les principales fonctionnalités de cette application</p>
                 </div>
             </div>
 
@@ -219,7 +192,7 @@
 
             <div class="col-md-12 col-sm-12">
                 <div class="section-title">
-                    <h1>App Downloads</h1>
+                    <h1>App Téléchargements</h1>
                     <hr>
                 </div>
             </div>
