--- a/lang/ja/index.html
+++ b/lang/ja/index.html
@@ -12,13 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="baidu-site-verification" content="iWKi8BD7Fl" />
 
-    <title>TorrSE Website，TorrSE App</title>
+    <title>TorrSEの公式ウェブサイト、TorrSEアプリ、TorrSEアプリケーション</title>
 
-    <meta name="description" content="The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!">
+    <meta name="description" content="Android上で最高のシード検索クライアント！ 最も単純で、最も便利で、そして最も強力なシード検索クライアントに焦点を当てる!">
     <meta property="og:type" content="webpage">
     <meta property="og:url" content="">
     <meta property="og:title" content="TorrSE">
-    <meta property="og:description" content="TorrSE Website">
+    <meta property="og:description" content="TorrSEオフィシャルウェブサイト">
     <meta name="apple-mobile-web-app-title" content="TorrSE">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -49,34 +49,6 @@
     <!-- Main css -->
     <link rel="stylesheet" href="/static/appwebsite/style.css" charset="UTF-8">
 
-
-    <script type="text/javascript">
-	
-	　　var langType = navigator.appName;
-	　　if (langType == "Netscape"){
-		　　var lang = navigator.language;
-	　　}else{
-		　　var lang = navigator.userLanguage;
-	　　};
-	    var lang = lang.substr(0, 2);
-	　　if (lang == "es"){
-	 　 	window.location.replace('https://seedboxs.me/lang/es/index.html');
-	　　}else if (lang == "de"){
-	   　	window.location.replace('https://seedboxs.me/lang/de/index.html');
-	　　}else if (lang == "fr"){
-	   　	window.location.replace('https://seedboxs.me/lang/fr/index.html');
-	　　}else if (lang == "pt"){
-	   　	window.location.replace('https://seedboxs.me/lang/pt/index.html');
-	　　}else if (lang == "zh"){
-	   　	window.location.replace('https://seedboxs.me/lang/zh-tw/index.html');
-	　　}else if (lang == "it"){
-	   　	window.location.replace('https://seedboxs.me/lang/it/index.html');
-	　　}else if (lang == "ko"){
-	   　	window.location.replace('https://seedboxs.me/lang/ko/index.html');
-	　　}else if (lang == "ja"){
-	   　	window.location.replace('https://seedboxs.me/lang/ja/index.html');
-	　　}
-	</script>
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 <div class="adcenter">
@@ -106,9 +78,9 @@
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class=""><a href="#home" class="smoothScroll">Main</a></li>
-                <li class=""><a href="#screenshot" class="smoothScroll">Screenshot</a></li>
-                <li class=""><a href="#pricing" class="smoothScroll">Download</a></li>
+                <li class=""><a href="#home" class="smoothScroll">ホームページ</a></li>
+                <li class=""><a href="#screenshot" class="smoothScroll">アプリケーションのスクリーンショット</a></li>
+                <li class=""><a href="#pricing" class="smoothScroll">アプリケーションダウンロード</a></li>
             </ul>
         </div>
 
@@ -130,11 +102,11 @@
             <div class="col-md-6 col-sm-7 col-xs-12">
                 <div class="home-thumb">
                     <h1 class="wow fadeInUp animated" data-wow-delay="0.6s"
-                        style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">App Main</h1>
+                        style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">申請ホームページ</h1>
                     <p class="wow fadeInUp animated" data-wow-delay="0.8s"
-                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!</p>
+                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">Android上で最高のシード検索クライアント！ 最も単純で、最も便利で、そして最も強力なシード検索クライアントに焦点を当てる!</p>
                     <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
-                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Download</a>
+                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">アプリケーションダウンロード</a>
                 </div>
             </div>
 
@@ -152,8 +124,8 @@
 
             <div class="col-md-offset-2 col-md-8 col-sm-12">
                 <div class="section-title">
-                    <h1>App Screenshot</h1>
-                    <p class="wow fadeInUp" data-wow-delay="0.8s">Here is a screenshot of the app that contains the main features of this app</p>
+                    <h1>アプリケーションのスクリーンショット</h1>
+                    <p class="wow fadeInUp" data-wow-delay="0.8s">これは、アプリの主な機能を含むアプリのスクリーンショットです。</p>
                 </div>
             </div>
 
@@ -219,7 +191,7 @@
 
             <div class="col-md-12 col-sm-12">
                 <div class="section-title">
-                    <h1>App Downloads</h1>
+                    <h1>アプリケーションダウンロード</h1>
                     <hr>
                 </div>
             </div>
@@ -229,6 +201,13 @@
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Google Play</a>
             </div>
+          <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
+                <a href="https://seedboxs.me/raw/app-release.apk"
+                   class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
+                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">直接ダウンロード</a>
+            </div>
+
+
 
         </div>
     </div>
