--- a/bulletin/torrse_en_bulletin.html
+++ b/bulletin/torrse_en_bulletin.html
@@ -1,4 +1,6 @@
 ﻿<!DOCTYPE html>
 <h5>About website verification</h5>
 <p>There are some search sources that need to be verified in order to access such as Rarbg, 1337x, zooqle.</p>
+<h5><font color="red">Policy update</font></h5>
+<p>The usage policy and privacy policy have been updated please <a href="https://seedboxs.me/protocol/torrse_en_protocol.html" target="_blank">check</a>！</p>
 </html>
