--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -2,5 +2,5 @@
 <h5>关于网站验证</h5>
 <p>有一些搜索源需要验证才能访问，例如Rarbg，1337x，zooqle。</p>
 <h5><font color="red">政策更新</font></h5>
-<p>使用政策和隱私政策已經更新請<a href="https://seedboxs.me/protocol/torrse_tw_protocol.html" target="_blank">查看</a>！</p>
+<p>使用政策和隐私政策已经更新请<a href="https://seedboxs.me/protocol/torrse_cn_protocol.html" target="_blank">查看</a>！</p>
 </html>
