--- a/protocol/torrse_cn_protocol.html
+++ b/protocol/torrse_cn_protocol.html
@@ -9,7 +9,7 @@
 <p>禁止反向工程、反向编译和反向汇编：用户不得对本软件产品进行反向工程(ReverseEngineer)、反向编译(Decompile)或反向汇编(Disassemble)，同时不得改动编译在程序文件内部的任何资源。除法律、法规明文规定允许上述活动外，用户必须遵守此协议限制。</p>
 <p>组件分割：本软件产品是作为一个单一产品而被授予许可使用，用户不得将各个部分分开用于任何目的。</p>
 <h3>用户使用须知</h3>
-<p>软件功能：本软件工作原理类似于浏览器，内容解析自基于DHT协议的BT资源搜索引擎网站，所有资源来源于对网站内容自动抓取，所有排数据由程序自动生成。我们不存储任何资源和种子文件，只对网站内容进行爬取并提供搜索服务，一切操作都在本地完成。</p>
+<p>软件功能：本软件工作原理类似于浏览器，内容解析自基于DHT协议的BT资源搜索引擎网站，所有资源来源于对网站内容自动抓取，所有数据由程序自动生成。我们不存储任何资源和种子文件，只对网站内容进行爬取并提供搜索服务，一切操作都在本地完成。</p>
 <p>你搜索到的结果是根据您输入的关键字自动搜索获得并生成，不代表本软件赞成被搜索链接到的第三方网页上的内容或立场。</p>
 <p>您应该对使用本软件搜索到的结果自行承担风险。本软件不做任何形式的保证：不保证搜索结果满足您的要求，不保证搜索服务不中断，不保证搜索结果的安全性、正确性、及时性、合法性。因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用本软件，本软件不承担任何法律责任。</p>
 <h3>免责声明</h3>
