--- a/protocol/torrse_tw_protocol.html
+++ b/protocol/torrse_tw_protocol.html
@@ -8,11 +8,11 @@
 <h3>權利限制</h3>
 <p>禁止反向工程、反向編譯和反向彙編：用戶不得對本軟件產品進行反向工程(ReverseEngineer)、反向編譯(Decompile)或反向彙編(Disassemble)，同時不得改動編譯在程序文件內部的任何資源。除法律、法規明文規定允許上述活動外，用戶必須遵守此協議限制。</p>
 <p>組件分割：本軟件產品是作為一個單一產品而被授予許可使用，用戶不得將各個部分分開用於任何目的。</p>
-<h3>用戶使用須知</h3>
+<h3><font color="red">用戶使用須知</font></h3>
 <p>軟件功能：本軟件工作原理類似於瀏覽器，內容解析自基於DHT協議的BT資源搜索引擎網站，所有資源來源於對網站內容自動抓取，所有數據由程序自動生成。我們不存儲任何資源和種子文件，只對網站內容進行爬取並提供搜索服務，一切操作都在本地完成。</p>
 <p>你搜索到的結果是根據您輸入的關鍵字自動搜索獲得併生成，不代表本軟件贊成被搜索鏈接到的第三方網頁上的內容或立場。</p>
 <p>您應該對使用本軟件搜索到的結果自行承擔風險。本軟件不做任何形式的保證：不保證搜索結果滿足您的要求，不保證搜索服務不中斷，不保證搜索結果的安全性、正確性、及時性、合法性。因網絡狀況、通訊線路、第三方網站等任何原因而導致您不能正常使用本軟件，本軟件不承擔任何法律責任。</p>
-<h3>免責聲明</h3>
+<h3><font color="red">免責聲明</font></h3>
 <p>TorrSE是一個本地爬蟲工具，所有的數據都是由用戶使用本軟件生成。<b><font color="red">本軟件所有內容均來源於互聯網，本軟件對內容的有效性和真實性不負任何責任和連帶責任，如涉及糾紛，請聯繫源網站處理。</font> </b>
 <br><br>本應用採用爬蟲技術，將互聯網上的資源整合到App內。方便搜索查找，僅供學習資料和影視娛樂，請合理使用。本應用可以結合第三方播放器（如迅雷）使用，部分國家和地區禁止使用迅雷等P2P技術請勿使用本軟件，<b><font color="red">本應用所有的資源鏈接採自網絡，不存放任何資源文件，也不提供任何資源的下載，如果涉及互聯網侵權問題，請聯繫源網站，開發者不承擔任何法律責任。</font> </b></p>
 <h3>隱私政策</h3>
