--- a/protocol/torrse_cn_protocol.html
+++ b/protocol/torrse_cn_protocol.html
@@ -11,7 +11,7 @@
 <h3><font color="red">用户使用须知</font></h3>
 <p>软件功能：本软件工作原理类似于浏览器，内容解析自基于DHT协议的BT资源搜索引擎网站，所有资源来源于对网站内容自动抓取，所有数据由程序自动生成。我们不存储任何资源和种子文件，只对网站内容进行爬取并提供搜索服务，一切操作都在本地完成。</p>
 <p>你搜索到的结果是根据您输入的关键字自动搜索获得并生成，不代表本软件赞成被搜索链接到的第三方网页上的内容或立场。</p>
-<p>您应该对使用本软件搜索到的结果自行承担风险。本软件不做任何形式的保证：不保证搜索结果满足您的要求，不保证搜索服务不中断，不保证搜索结果的安全性、正确性、及时性、合法性。因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用本软件，本软件不承担任何法律责任。</p>
+<p><b><font color="red">您应该对使用本软件搜索到的结果自行承担风险。本软件不做任何形式的保证：不保证搜索结果满足您的要求，不保证搜索服务不中断，不保证搜索结果的安全性、正确性、及时性、合法性。因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用本软件，本软件不承担任何法律责任。</font></b></p>
 <h3><font color="red">免责声明</font></h3>
 <p>TorrSE是一个本地爬虫工具，所有的数据都是由用户使用本软件生成。<b><font color="red">本软件所有内容均来源于互联网，本软件对内容的有效性和真实性不负任何责任和连带责任，如涉及纠纷，请联系源网站处理。</font></b>
 <br><br>本应用采用爬虫技术，将互联网上的资源整合到App内。方便搜索查找，仅供学习资料和影视娱乐，请合理使用。本应用可以结合第三方播放器（如迅雷）使用，部分国家和地区禁止使用迅雷等P2P技术请勿使用本软件，<b><font color="red">本应用所有的资源链接采自网络，不存放任何资源文件，也不提供任何资源的下载，如果涉及互联网侵权问题，请联系源网站，开发者不承担任何法律责任。</font> </b></p>
