--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -2,5 +2,5 @@
 <h5>关于网站验证</h5>
 <p>有一些搜索源需要验证才能访问，例如Rarbg，1337x，zooqle。</p>
 <h5><font color="red">评价TorrSE</font></h5>
-<p>如果觉得TorrSE很好用, 请评价我🌟🌟🌟🌟🌟!, <a href="market://details?id=com.seedboxs.me">点击这里评价</a></p>
+<p>如果觉得TorrSE很好用, 请评价我🌟🌟🌟🌟🌟!, <a href="market://details?id=com.yyp.seedboxs">点击这里评价</a></p>
 </html>
