--- a/lang/zh-cn/index.html
+++ b/lang/zh-cn/index.html
@@ -197,7 +197,7 @@
             </div>
 
           <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
-                <a href="https://seedboxs.me/raw/2.0.0.apk"
+                <a href="https://seedboxs.me/raw/app-release.apk"
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">直接下载</a>
             </div>
