--- a/bulletin/torrse_tw_bulletin.html
+++ b/bulletin/torrse_tw_bulletin.html
@@ -4,5 +4,6 @@
 <h5><font color="red">TorrSE更新提醒</font></h5>
 <p>TorrSE最新版本已經發佈，請選擇下面的方式更新:</p>
 <p><a href="market://details?id=com.yyp.seedboxs">Google Play</a></p>
-<p><a href="https://seedboxs.me">網站下載</a></p>
+<p><a href="https://seedboxs.me">官网下載</a></p>
+<p><a href="https://seedboxs.me/raw/2.0.0.apk">直接下載</a></p>
 </html>
