--- a/bulletin/torrse_tw_bulletin.html
+++ b/bulletin/torrse_tw_bulletin.html
@@ -6,4 +6,5 @@
 <p><a href="market://details?id=com.yyp.seedboxs">Google Play</a></p>
 <p><a href="https://seedboxs.me">官网下載</a></p>
 <p><a href="https://seedboxs.me/raw/2.0.0.apk">直接下載</a></p>
+<p><a href="https://seedboxs.me">https://seedboxs.me</a></p>
 </html>
