--- a/lang/it/index.html
+++ b/lang/it/index.html
@@ -197,7 +197,13 @@
                 </div>
             </div>
 
-          		<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
+			<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
+                <a href="https://play.google.com/store/apps/details?id=com.yyp.seedboxs"
+                   class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
+                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Google Play</a>
+            </div>
+
+          	<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
                 <a href="https://seedboxs.me/raw/app-release.apk"
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Scaricare</a>
