--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -1,11 +1,8 @@
 ﻿<!DOCTYPE html>
 <h5>关于网站验证</h5>
 <p>有一些搜索源需要验证才能访问，例如Rarbg，1337x，zooqle。</p>
-<h5><font color="red">TorrSE更新提醒</font></h5>
-<p>TorrSE最新版本已经发布，请选择下面的方式更新:</p>
-<p><font color="red">TorrSE内置的浏览器不支持下载，请在其他浏览器打开。</font></p>
-<p><a href="market://details?id=com.yyp.seedboxs">Google Play</a></p>
-<p><a href="https://seedboxs.me">官网下载</a></p>
-<p><a href="https://seedboxs.me/raw/2.0.0.apk">直接下载</a></p>
-<p><a href="https://seedboxs.me">https://seedboxs.me</a></p>
+<h5><font color="red">2019最新磁力种子搜索网站</font></h5>
+<p><a href="https://www.jianshu.com/p/13ae6b541e79">热门磁力种子搜索网站介绍</a></p>
+<p><a href="https://www.jianshu.com/p/401904b5c7ef">热门磁力种子搜索网站表格</a></p>
+<p><a href="https://www.jianshu.com/p/db14409f01f1">TorrSE使用教程</a></p>
 </html>
