--- a/lang/es/index.html
+++ b/lang/es/index.html
@@ -198,7 +198,7 @@
             </div>
 
 			<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
-                <a href="https://play.google.com/store/apps/details?id=com.yyp.seedboxs"
+                <a href="https://play.google.com/store/apps/details?id=com.torrentsearch.magnetsearch"
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Google Play</a>
             </div>
