--- a/bulletin/torrse_tw_bulletin.html
+++ b/bulletin/torrse_tw_bulletin.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <h5><font color="red">應用2.0.1更新提醒</font></h5>
 <p>請選擇以下方式更新:</p>
-<p><a href="https://www.lanzous.com/b838521">藍奏云</a></p>
+<p><a href="https://www.lanzous.com/b838521">下载</a></p>
 <p><a href="market://details?id=com.torrentsearch.magnetsearch">GooglePlay</a></p>
 </html>
