--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
-<h5><font color="red">应用2.0.1更新提醒</font></h5>
+<p><font color="red">使用旧版本的用户请尽快更新到最新版本</font></p>
+<h5><font color="red">应用2.0.2更新提醒</font></h5>
 <p>请选择下面的方式更新:</p>
 <p><a href="https://www.lanzous.com/b838521">蓝奏云</a></p>
 <p><a href="market://details?id=com.torrentsearch.magnetsearch">GooglePlay</a></p>
