--- a/bulletin/torrse_tw_bulletin.html
+++ b/bulletin/torrse_tw_bulletin.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
-<p><font color="red">使用舊版本的用戶請盡快更新到最新版本</font></p>
-<h5><font color="red">應用2.0.1更新提醒</font></h5>
+<p><font color="red">使用舊版本的用戶請盡快更新到最新版本，舊版本不再可用！</font></p>
+<h5><font color="red">應用2.0.2更新提醒</font></h5>
 <p>請選擇以下方式更新:</p>
 <p><a href="https://www.lanzous.com/b838521">藍奏云</a></p>
 <p><a href="market://details?id=com.torrentsearch.magnetsearch">GooglePlay</a></p>
