--- a/bulletin/torrse_en_bulletin.html
+++ b/bulletin/torrse_en_bulletin.html
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
-<h5>About website verification</h5>
-<p>There are some search sources that need to be verified in order to visit such as Rarbg, 1337x, zooqle.</p>
-<h5><font color="red">App 2.0.1 update reminder</font></h5>
-<p>Please choose the method below to update:</p>
-<p><a href="market://details?id=com.torrentsearch.magnetsearch" target="_blank">Google Play</a></p>
+<p><font color="red">Users using the old version should update to the latest version as soon as possible, the old version is no longer available!</font></p>
+<h5><font color="red">App 2.0.2 update reminder</font></h5>
+<p>Please choose the following method to update:</p>
+<p><a href="market://details?id=com.torrentsearch.magnetsearch">Google Play</a></p>
 </html>
