--- a/bulletin/torrse_tw_bulletin.html
+++ b/bulletin/torrse_tw_bulletin.html
@@ -4,4 +4,6 @@
 <p>請選擇以下方式更新:</p>
 <p><a href="https://www.lanzous.com/b838521">藍奏云</a></p>
 <p><a href="market://details?id=com.torrentsearch.magnetsearch">GooglePlay</a></p>
+<h5>比特球-離線下載</h5>
+<p><a href=\"https://pan.bitqiu.com/promote-invite?mafrom=promote&mipos=cps&uid=108238050\">比特球雲盤</a>支持一鍵離線下載，高清雲預覽，不限速高速下載，註冊即可獲3天特權體驗卡，</p>
 </html>
