--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -4,4 +4,6 @@
 <p>请选择下面的方式更新:</p>
 <p><a href="https://www.lanzous.com/b838521">蓝奏云</a></p>
 <p><a href="market://details?id=com.torrentsearch.magnetsearch">GooglePlay</a></p>
+<h5>比特球-离线下载</h5>
+<p><a href=\"https://pan.bitqiu.com/promote-invite?mafrom=promote&mipos=cps&uid=108238050\">比特球云盘</a>支持一键离线下载，高清云预览，不限速高速下载，注册即可获3天特权体验卡，</p>
 </html>
